fixed y overflow

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,4 @@
 .app {
-  width: 100vw;
   flex-direction: column;
   justify-content: center;
   align-items: center;
